# revirathya-prefect

./: .dockerignore  Dockerfile  README.md  deploy.sh  prefect.yaml  pyproject.toml
flows/: example.py  test.py
flows/manga/: manga_scraper_mangabats.py  schemas.py
flows/manga/mangabats_scraper_chapters/: flow.py
flows/manga/mangabats_scraper_chapters/sql/: load_manga_chapters.sql
flows/manga/mangabats_scraper_overviews/: flow.py
flows/manga/mangabats_scraper_overviews/sql/: load_mangas.sql
flows/manga/sync_chapters/: flow.py
flows/manga/sync_chapters/sql/: fetch_mangas_by_code.sql  fetch_raw_chapters.sql  upsert_manga_chapters.sql  upsert_undefined_manga_chapters.sql
flows/manga/sync_overviews/: flow.py
flows/manga/sync_overviews/sql/: delete_manga_authors.sql  delete_manga_genres.sql  fetch_raw_overviews.sql  insert_manga_authors.sql  insert_manga_genres.sql  upsert_authors.sql  upsert_genres.sql  upsert_mangas.sql
shared/: macro.py
shared/scraper_logs/: __init__.py  task.py
shared/scraper_logs/sql/: fetch_new_job_id.sql  load_scraper_logs.sql  update_scraper_logs_processed.sql
